# 129-sum-root-leaf

./: 129_sum_root_2_leaf  CMakeLists.txt  README.md  build.sh
inc/: BinaryTree.h
src/: BinaryTree.cpp  test.cpp
